// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/MainMenuActions should render correctly in mobile view with some plugin and ability to click plugin 1`] = `
<div>
  <div
    aria-label="main menu"
    class="a11y__popup Menu"
  >
    <ul
      class="Menu__content dropdown-menu"
      role="menu"
    >
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="recentMentions"
        role="menuitem"
      >
        <button
          class="style--none"
          data-testid="recentMentions-button"
          id="recentMentions-button"
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="mentions"
              >
                @
              </i>
            </span>
            <div
              class="text"
            >
              Recent Mentions
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuItem MenuItem--with-icon"
        id="flaggedPosts"
        role="menuitem"
      >
        <button
          class="style--none"
          data-testid="flaggedPosts-button"
          id="flaggedPosts-button"
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-bookmark"
              />
            </span>
            <div
              class="text"
            >
              Saved messages
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="profileSettings"
        role="menuitem"
      >
        <button
          aria-label="Profile"
          class="style--none "
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-user"
              />
            </span>
            <div
              class="text"
            >
              Profile
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuItem MenuItem--with-icon"
        id="accountSettings"
        role="menuitem"
      >
        <button
          aria-label="Settings"
          class="style--none "
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-cog"
              />
            </span>
            <div
              class="text"
            >
              Settings
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="viewMembers"
        role="menuitem"
      >
        <button
          aria-label="View Members"
          class="style--none "
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-users"
              />
            </span>
            <div
              class="text"
            >
              View Members
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="joinTeam"
        role="menuitem"
      >
        <a
          class=""
          href="/select_team"
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-plus-square"
              />
            </span>
            <div
              class="text"
            >
              Join Another Team
            </div>
          </span>
        </a>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="someplugin_pluginmenuitem"
        role="menuitem"
      >
        <button
          class="style--none"
          data-testid="someplugin_pluginmenuitem-button"
          id="someplugin_pluginmenuitem-button"
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-anchor"
              />
            </span>
            <div
              class="text"
            >
              some plugin text
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="nativeAppLink"
        role="menuitem"
      >
        <a
          href=""
          location="menu_item_external_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-mobile"
              />
            </span>
            <div
              class="text"
            >
              Download Apps
            </div>
          </span>
        </a>
      </li>
      <li
        class="MenuItem MenuItem--with-icon"
        id="about"
        role="menuitem"
      >
        <button
          aria-label="About Mattermost"
          class="style--none "
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-info"
              />
            </span>
            <div
              class="text"
            >
              About Mattermost
            </div>
          </span>
        </button>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuItem MenuItem--with-icon"
        id="logout"
        role="menuitem"
      >
        <button
          class="style--none"
          data-testid="logout-button"
          id="logout-button"
        >
          <span
            class="MenuItem__primary-text"
          >
            <span
              class="icon"
            >
              <i
                class="fa fa-sign-out"
              />
            </span>
            <div
              class="text"
            >
              Log Out
            </div>
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`plugins/MainMenuActions should render correctly in web view 1`] = `
<div>
  <div
    aria-label="team menu"
    class="a11y__popup Menu"
  >
    <ul
      class="Menu__content dropdown-menu"
      role="menu"
    >
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <li
        class="MenuItem"
        id="viewMembers"
        role="menuitem"
      >
        <button
          aria-label="View Members"
          class="style--none "
        >
          <span
            class="MenuItem__primary-text"
          >
            View Members
          </span>
        </button>
      </li>
      <li
        class="MenuItem"
        id="joinTeam"
        role="menuitem"
      >
        <a
          class=""
          href="/select_team"
        >
          <span
            class="MenuItem__primary-text"
          >
            Join Another Team
          </span>
        </a>
      </li>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: none;"
      />
      <div
        class="MainMenu_dropdown-link"
      >
        <div
          class="LearnAboutTeamsLink"
        >
          <a
            href="https://mattermost.com/pl/mattermost-academy-team-training?utm_source=mattermost&utm_medium=in-product&utm_content=learn_about_teams&uid=&sid="
            location="learn_about_teams"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="icon icon-lightbulb-outline"
            />
            <span>
              Learn about teams
            </span>
          </a>
        </div>
      </div>
      <li
        class="MenuGroup menu-divider"
        role="separator"
        style="display: block;"
      />
      <li
        class="MenuItem"
        id="someplugin_pluginmenuitem"
        role="menuitem"
      >
        <button
          class="style--none"
          data-testid="someplugin_pluginmenuitem-button"
          id="someplugin_pluginmenuitem-button"
        >
          <span
            class="MenuItem__primary-text"
          >
            some plugin text
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
